<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>koolskateguy89</groupId>
	<artifactId>Anime-Filler-Manager</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1</version>

	<name>AFM</name>
	<url>https://github.com/koolskateguy89/Anime-Filler-Manager</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<javafx.version>15.0.1</javafx.version>
		<main.class>afm.Launcher</main.class>
	</properties>

	<dependencies>
		<!-- Project Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.22</version>
			<scope>provided</scope>
		</dependency>

		<!--<editor-fold desc="JavaFX">-->
		<!-- JavaFX -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<!--</editor-fold>-->

		<!-- ControlsFX (only for Notification atm) -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.1</version>
		</dependency>

		<!-- Google Guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.0.1-jre</version>
		</dependency>

		<!-- jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.14.3</version>
		</dependency>

		<!-- sqlite jdbc driver -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.36.0.3</version>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.name}</finalName>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- FIXME -->
			<!-- Using Proguard Maven plugin: https://stackoverflow.com/a/34706467 -->
			<!-- Obfuscate after shading so optimize everything ? -->
			<!-- uses proguard.conf -->
			<!--plugin>
				<groupId>com.github.wvengen</groupId>
				<artifactId>proguard-maven-plugin</artifactId>
				<version>2.3.1</version>
				<executions>
					<execution>
						<id>obfuscation-packaging</id>
						<goals>
							<goal>proguard</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<obfuscate>true</obfuscate>
					<appendClassifier>false</appendClassifier>
					<addMavenDescriptor>true</addMavenDescriptor>
					<injar>${project.build.finalName}.jar</injar>
					<injarNotExistsSkip>true</injarNotExistsSkip>
					<libs>
						<lib>${java.home}/jmods/java.base.jmod</lib>
					</libs>
					<!- - Only use this if after shade -->
					<!-- Exclude all dependencies because they should already be in the jar -->
					<!--exclusions>
						<exclusion>
							<groupId>org.openjfx</groupId>
							<artifactId>javafx-base</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.openjfx</groupId>
							<artifactId>javafx-controls</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.openjfx</groupId>
							<artifactId>javafx-fxml</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.openjfx</groupId>
							<artifactId>javafx-media</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.controlsfx</groupId>
							<artifactId>controlsfx</artifactId>
						</exclusion>
						<exclusion>
							<groupId>com.google.guava</groupId>
							<artifactId>guava</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.jsoup</groupId>
							<artifactId>jsoup</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.xerial</groupId>
							<artifactId>sqlite-jdbc</artifactId>
						</exclusion>
					</exclusions- - >
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.guardsquare</groupId>
						<artifactId>proguard-base</artifactId>
						<version>7.1.0-beta3</version>
						<scope>runtime</scope>
					</dependency>
					<dependency>
						<groupId>com.guardsquare</groupId>
						<artifactId>proguard-core</artifactId>
						<version>7.1.0-beta3</version>
						<scope>runtime</scope>
					</dependency>
				</dependencies>
			</plugin-->

			<!-- Build an executable 'shaded' JAR -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>

						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>

							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${main.class}</mainClass>
								</transformer>
							</transformers>

							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/license/**</exclude>
										<exclude>META-INF/*</exclude>
										<exclude>META-INF/maven/**</exclude>
										<exclude>LICENSE</exclude>
										<exclude>NOTICE</exclude>
									</excludes>
								</filter>
							</filters>

						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
